# whisper-android

./: .gitignore  README.md  TODO.md  gradle.properties  settings.gradle.kts
.github/: markdown-link-check-config.json
.github/workflows/: ci.yml  dependency-update.yml  pr-validation.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.app.whisper.data.local.database.WhisperDatabase/: 1.json
app/src/androidTest/java/com/app/whisper/integration/: FinalIntegrationTest.kt  TranscriptionIntegrationTest.kt
app/src/main/: AndroidManifest.xml  baseline-prof.txt
app/src/main/cpp/: CMakeLists.txt  audio_processor.cpp  whisper_jni_placeholder.cpp  whisper_jni_real.cpp.bak
app/src/main/java/com/app/whisper/: WhisperApplication.kt
app/src/main/java/com/app/whisper/data/audio/: AudioProcessorImpl.kt  AudioRecorderImpl.kt
app/src/main/java/com/app/whisper/di/: AppModule.kt  AudioModule.kt  DatabaseModule.kt  NetworkModule.kt  PerformanceModule.kt  RepositoryModule.kt  UseCaseModule.kt  ViewModelModule.kt
app/src/main/java/com/app/whisper/native/: AudioProcessor.kt  TranscriptionRequest.kt  WhisperContext.kt  WhisperNative.kt
app/src/main/java/com/app/whisper/performance/: AudioOptimizer.kt  MemoryOptimizer.kt  PerformanceManager.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/app/whisper/: TestApplication.kt  TestConfiguration.kt
app/src/test/java/com/app/whisper/di/: TestModule.kt
app/src/test/resources/: robolectric.properties
docs/: API.md  ARCHITECTURE.md  PERFORMANCE.md
scripts/: build.sh  release.sh
(+41 files in other folders)
